Correcting url for index.json file

--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -90,7 +90,7 @@
     })
 
     //Fetch search index
-    fetch( {{ .Site.BaseURL }} + 'index.json').then(res => {
+    fetch( {{ .Site.BaseURL }} + '/index.json').then(res => {
 
         //Parse JSON
         res.json().then( searchIndex => {
